landing page styles, mailchimp integration begins

--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
 
 		</header>
 		<div id="main" role="main">
+			<div id="main-box">
+				<div id="main-box-content">
+					<h1>LaunchChimp</h1>
+					<p>LaunchChimp is an HTML5 and Javascript template to launch a landing page with Mailchimp integration</p>
+					<form action="http://48WebConsulting.us1.list-manage.com/subscribe/post?u=f2ae2d1ab66e2af57ed5ec64a&amp;id=a929057d16" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">	
 
+					<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
+				</form>
+				</div>
+			</div>
 		</div>
 		<footer>
 
