--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 				<div id="main-box-content">
 					<h1>LaunchChimp</h1>
 					<p>LaunchChimp is an HTML5 and Javascript template to launch a landing page with Mailchimp integration</p>
-					<form action="[your-id-here]" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">	
-
-					<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
-				</form>
+					<form action="http://yoursite.us2.list-manage.com/subscribe/post?u=541sfasddf6asddf8976f5929b53aa6&amp;id=2d9d4c2327" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
+					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
+					    <input type="text" value="Email Address" name="EMAIL" class="form_field"onblur="if (this.value == '') {this.value = 'Email Address';}" onfocus="if (this.value == 'Email Address') {this.value = '';}"/>
+					    <input type="submit" value="Get Started!" name="subscribe" class="form_button"/>
+					</form>
 				</div>
 			</div>
 		</div>
