--- a/index.html
+++ b/index.html
@@ -34,27 +34,28 @@
 
 <body>
 	<div id="container">
-		<header>
-
-		</header>
 		<div id="main" role="main">
 			<div id="main-box">
 				<div id="main-box-content">
-					<h1>LaunchChimp</h1>
-					<p>LaunchChimp is an HTML5 and Javascript template to launch a landing page with Mailchimp integration</p>
-					<p>If you <strong>sign up below</strong>, we'll send you the link to download away!</p>
+					<header>
+						<h1>LaunchChimp</h1>
+					</header>
+					<section>
+						<p>LaunchChimp is an HTML5 and Javascript template to launch a landing page with Mailchimp integration</p>
+						<p>If you <strong>sign up below</strong>, we'll send you the link to download away!</p>
+					</section>
 					<form action="http://yoursite.us2.list-manage.com/subscribe/post?u=541sfasddf6asddf8976f5929b53aa6&amp;id=2d9d4c2327" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
 					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
 					    <input type="text" value="Email Address" name="EMAIL" class="form_field"onblur="if (this.value == '') {this.value = 'Email Address';}" onfocus="if (this.value == 'Email Address') {this.value = '';}"/>
 					    <input type="submit" value="Get Started!" name="subscribe" class="form_button"/>
 						<div class="clearfix"></div>
 					</form>
+					<footer>
+						<p class="credits">powered by <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">launchchimp</a></p>
+					</footer>
 				</div>
 			</div>
 		</div>
-		<footer>
-
-		</footer>
 	</div> <!--! end of #container -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
