--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<!-- HEY!!! READ THE INSTRUCTIONS FIRST SO YOU UPDATE EVERYTHING" -->
+
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
@@ -21,10 +23,8 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
 	<link rel="stylesheet" href="css/html5.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<!-- More ideas for your <head> here: h5bp.com/docs/#head-Tips -->
-
+	<link rel="stylesheet" href="templates/launchchimp/style.css">
+	
 	<!-- All JavaScript at the bottom, except for Modernizr and Respond.
 	     Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
 	     For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
@@ -41,10 +41,9 @@
 						<h1>LaunchChimp</h1>
 					</header>
 					<section>
-						<p>LaunchChimp is an HTML5 and Javascript template to launch a landing page with Mailchimp integration</p>
-						<p>If you <strong>sign up below</strong>, we'll send you the link to download away!</p>
+						<p>LaunchChimp is simple. It's a landing page anyone can use that's integrated with Mailchimp</p>
 					</section>
-					<form action="http://yoursite.us2.list-manage.com/subscribe/post?u=541sfasddf6asddf8976f5929b53aa6&amp;id=2d9d4c2327" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
+					<form action="MAILCHIMPURL" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
 					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
 					    <input type="text" value="Email Address" name="EMAIL" class="form_field"onblur="if (this.value == '') {this.value = 'Email Address';}" onfocus="if (this.value == 'Email Address') {this.value = '';}"/>
 					    <input type="submit" value="Get Started!" name="subscribe" class="form_button"/>
@@ -58,30 +57,29 @@
 		</div>
 	</div> <!--! end of #container -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-  <!-- scripts concatenated and minified via ant build script-->
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <!-- end scripts-->
+	<!-- scripts concatenated and minified via ant build script-->
+	<script src="js/plugins.js"></script>
+	<script src="js/script.js"></script>
+	<!-- end scripts-->
 
-  <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
+	<!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
+	<script>
+	  var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
+	  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+	  g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+	  s.parentNode.insertBefore(g,s)}(document,'script'));
+	</script>
 
 
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7 ]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
-  
+	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+	     chromium.org/developers/how-tos/chrome-frame-getting-started -->
+	<!--[if lt IE 7 ]>
+	  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+	  <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+	<![endif]-->
 </body>
 </html>
