updated styles, added more instructions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<h1>LaunchChimp</h1>
 					</header>
 					<section>
-						<p>LaunchChimp is simple. It's a landing page anyone can use that's integrated with Mailchimp</p>
+						<p>LaunchChimp is a free html/js/css landing page template that hooks up to Mailchimp.</p>
 					</section>
 					<form action="MAILCHIMPURL" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
 					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
