updated copy & links for both themes

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -46,9 +46,9 @@
 					<div id="form">
 						<section class="element">
 							<h2 class="headline">Landing Page + Mailchimp = Money</h2>
-							<p class="description">
-								LaunchChimp is a free html/js/css landing page template that hooks up to Mailchimp.
-							</p>
+							<p class="description">LaunchChimp are free landing page templates that integrate with MailChimp.</p>
+							<p>This is the Coming Soon theme. Check out the <a href="index.html">Launch</a> theme.</p>
+							<p>Signup to download or grab a copy on <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">GitHub</a>.</p>
 						</section>
 						<section class="element">
 							<form action="MAILCHIMPURL" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
