--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Mailchimp Powered Landing Page</title>
-	<meta name="description" content="Launch page with Mailchimp Integration">
+	<meta name="description" content="Landing page with Mailchimp Integration">
 	<meta name="author" content="Andy Brudtkuhl">
 
 	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
@@ -41,7 +41,9 @@
 						<h1>LaunchChimp</h1>
 					</header>
 					<section>
-						<p>LaunchChimp is a free html/js/css landing page template that hooks up to Mailchimp.</p>
+						<p>LaunchChimp are free landing page templates that integrate with MailChimp.</p>
+						<p>This is the Launch theme. Check out the <a href="comingsoon.html">Coming Soon</a> theme.</p>
+						<p>Signup to download or grab a copy on <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">GitHub</a>.</p>
 					</section>
 					<form action="MAILCHIMPURL" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
 					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
@@ -50,7 +52,7 @@
 						<div class="clearfix"></div>
 					</form>
 					<footer>
-						<p class="credits">powered by <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">launchchimp</a></p>
+						<p class="credits">powered by <a href="http://launchchimp.com" target="_blank">launchchimp</a></p>
 					</footer>
 				</div>
 			</div>
