added global module css file. add top bar notifications

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
 	<link rel="stylesheet" href="css/html5.css">
+	<link rel="stylesheet" href="css/modules.css">
 	<link rel="stylesheet" href="templates/launchchimp/style.css">
 	
 	<!-- All JavaScript at the bottom, except for Modernizr and Respond.
@@ -33,6 +34,10 @@
 </head>
 
 <body>
+	<div id="top-bar" style="display:block;">
+		<!-- Set style="display:none" to hide top bar -->
+		Check out new <a href="comingsoon.html">Coming Soon theme</a>!
+	</div>
 	<div id="container">
 		<div id="main" role="main">
 			<div id="main-box">
