--- a/comingsoon.html
+++ b/comingsoon.html
@@ -46,7 +46,7 @@
 					<div id="form">
 						<section class="element">
 							<h2 class="headline">Landing Page + Mailchimp = Money</h2>
-							<p class="description">LaunchChimp are free landing page templates that integrate with MailChimp.</p>
+							<p class="description">LaunchChimp themes are free landing page templates that integrate with MailChimp.</p>
 							<p>This is the Coming Soon theme. Check out the <a href="index.html">Launch</a> theme.</p>
 							<p>Signup to download or grab a copy on <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">GitHub</a>.</p>
 						</section>
