--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<h1>LaunchChimp</h1>
 					</header>
 					<section>
-						<p>LaunchChimp are free landing page templates that integrate with MailChimp.</p>
-						<p>This is the Launch theme. Check out the <a href="comingsoon.html">Coming Soon</a> theme.</p>
-						<p>Signup to download or grab a copy on <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">GitHub</a>.</p>
+						<p>LaunchChimp themes are free landing page templates that integrate with MailChimp.</p>
+						<p>Check out the <a href="comingsoon.html">Coming Soon</a> theme!</p>
+						<p>Signup below to download or grab a copy on <a href="https://github.com/abrudtkuhl/LaunchChimp" target="_blank">GitHub</a>.</p>
 					</section>
 					<form action="MAILCHIMPURL" method="post" class="mailchimp_form" name="mc-embedded-subscribe-form" target="_blank">
 					    <input type="text" value="First Name" name="FNAME" class="form_field" onblur="if (this.value == '') {this.value = 'First Name';}" onfocus="if (this.value == 'First Name') {this.value = '';}"/>
